// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListDivided > should render an empty list divided 1`] = `
<DocumentFragment>
  <span
    data-testid="list-divided__empty"
  >
    empty
  </span>
</DocumentFragment>
`;

exports[`ListDivided > should render an list divided with lastBorder = false 1`] = `
<DocumentFragment>
  <ul
    class="[&>li]:border-theme-secondary-300 dark:[&>li]:border-theme-secondary-800 dim:[&>li]:border-theme-dim-700 [&>li]:mb-4 [&>li]:border-b [&>li]:border-dashed [&>li]:pb-4"
    data-testid="list-divided__items"
  >
    <li
      class="flex w-full flex-col"
      data-testid="list-divided-item__wrapper"
    >
      <div
        class="flex justify-between flex-col items-start"
        data-testid="list-divided-item__inner-wrapper"
      >
        <div
          class="flex w-full flex-col space-y-2"
        >
          <div
            class="flex items-center justify-between space-x-5"
          >
            <span
              class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-50 font-semibold"
              data-testid="list-divided-item__label"
            >
              New Profile
            </span>
          </div>
          <span
            class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-medium"
            data-testid="list-divided-item__label--description"
          >
            Select Profile Image
          </span>
        </div>
      </div>
      <div
        class=""
        data-testid="list-divided-item__content"
      >
        <div
          class="mt-2 flex flex-row"
        >
          <div
            class="border-theme-secondary-500 mr-6 flex h-24 w-24 items-center justify-center rounded border-2 border-dashed"
          />
          <div
            class="bg-theme-secondary-500 relative h-24 w-24 rounded"
          >
            <img
              alt="random avatar"
              class="rounded object-cover"
              src="https://randomuser.me/api/portraits/men/3.jpg"
            />
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ListDivided > should render an list divided with lastBorder = true 1`] = `
<DocumentFragment>
  <ul
    class="[&>li]:border-theme-secondary-300 dark:[&>li]:border-theme-secondary-800 dim:[&>li]:border-theme-dim-700 [&>li]:mb-4 [&>li]:border-b [&>li]:border-dashed [&>li]:pb-4 [&>li:last-child]:mb-0 [&>li:last-child]:border-b-0 [&>li:last-child]:pb-0"
    data-testid="list-divided__items"
  >
    <li
      class="flex w-full flex-col"
      data-testid="list-divided-item__wrapper"
    >
      <div
        class="flex justify-between flex-col items-start"
        data-testid="list-divided-item__inner-wrapper"
      >
        <div
          class="flex w-full flex-col space-y-2"
        >
          <div
            class="flex items-center justify-between space-x-5"
          >
            <span
              class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-50 font-semibold"
              data-testid="list-divided-item__label"
            >
              New Profile
            </span>
          </div>
          <span
            class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-medium"
            data-testid="list-divided-item__label--description"
          >
            Select Profile Image
          </span>
        </div>
      </div>
      <div
        class=""
        data-testid="list-divided-item__content"
      >
        <div
          class="mt-2 flex flex-row"
        >
          <div
            class="border-theme-secondary-500 mr-6 flex h-24 w-24 items-center justify-center rounded border-2 border-dashed"
          />
          <div
            class="bg-theme-secondary-500 relative h-24 w-24 rounded"
          >
            <img
              alt="random avatar"
              class="rounded object-cover"
              src="https://randomuser.me/api/portraits/men/3.jpg"
            />
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
